--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -54,17 +54,18 @@
 
       <div class="bground">
         <div class="content">
-          <span class="close"></span>
+          <span class="close" id="btnClose"></span>
           <div class="modal-body">
             <form
               name="reserve"
+              id="modalForm"
               action="index.html"
               method="get"
               onsubmit="return validate();"
             >
               <div
                 class="formData">
-                <label>Prénom</label><br>
+                <label>Prénom</label><br>                
                 <input
                   class="text-control"
                   type="text"
@@ -73,8 +74,9 @@
                   minlength="2"
                 /><br>
               </div>
+              <div class="result" id="first-validation"></div>
               <div
-                class="formData">
+                class="formData" id="nom">
                 <label>Nom</label><br>
                 <input
                   class="text-control"
@@ -83,6 +85,7 @@
                   name="last"
                 /><br>
               </div>
+              <div class="result" id="last-validation"></div>
               <div
                 class="formData">
                 <label>E-mail</label><br>
@@ -93,6 +96,7 @@
                   name="email"
                 /><br>
               </div>
+              <div class="result" id="email-validation"></div>
               <div
                 class="formData">
                 <label>Date de naissance</label><br>
@@ -108,6 +112,7 @@
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               </div>
+              <div class="result" id="quantity-validation"></div>
               <p class="text-label">Quelles villes ?</p>
               <div
                 class="formData">
@@ -178,6 +183,7 @@
                   Portland</label
                 >
               </div>
+              <div class="result" id="location-validation"></div>
 
               <div
                 class="formData">
@@ -199,11 +205,14 @@
                 </label>
                 <br>
               </div>
+              <div class="result" id="conditions-validation"></div>
               <input
                 class="btn-submit"
                 type="submit"
                 class="button"
+                id="submit"
                 value="C'est parti"
+                disabled
               />
             </form>
           </div>
