--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -107,6 +107,7 @@
                   name="birthdate"
                 /><br>
               </div>
+              <div class="result" id="birthdate-validation"></div>
               <div
                 class="formData">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
