--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -74,7 +74,7 @@
                   minlength="2"
                 /><br>
               </div>
-              <div class="result" id="firstName-validation"></div>
+              <div class="result" id="first-validation"></div>
               <div
                 class="formData" id="nom">
                 <label>Nom</label><br>
@@ -85,7 +85,7 @@
                   name="last"
                 /><br>
               </div>
-              <div class="result" id="lastName-validation"></div>
+              <div class="result" id="last-validation"></div>
               <div
                 class="formData">
                 <label>E-mail</label><br>
