--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -192,6 +192,7 @@
                   class="checkbox-input"
                   type="checkbox"
                   id="checkbox1"
+                  name="conditions"
                   checked
                 />
                 <label class="checkbox2-label" for="checkbox1" required>
