close confirm modal OK

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -221,6 +221,23 @@
           </div>
         </div>
       </div>
+
+       <div class="confirm" id="confirm-div"> 
+         <div class="confirm-background"></div>       
+         <div class="confirm-body">
+          <span class="close closeConfirmationModal" id="btnClose2"></span>
+          <div class="confirm-body-message">Thank you for submitting your registration details</div>
+          <input
+                class="btn-submit confirm-btn-submit closeConfirmationModal"
+                type="submit"
+                class="button"
+                id="submit-confirm"
+                value="Close"                
+            />          
+         </div>
+
+
+      </div>
     </main>
     <footer>
       <p class="copyrights">
