--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             >
               <div
                 class="formData">
-                <label>Prénom</label><br>                
+                <label for="first">Prénom</label><br>                
                 <input
                   class="text-control"
                   type="text"
@@ -77,7 +77,7 @@
               <div class="result" id="first-validation"></div>
               <div
                 class="formData" id="nom">
-                <label>Nom</label><br>
+                <label for="last">Nom</label><br>
                 <input
                   class="text-control"
                   type="text"
@@ -88,7 +88,7 @@
               <div class="result" id="last-validation"></div>
               <div
                 class="formData">
-                <label>E-mail</label><br>
+                <label for ="email">E-mail</label><br>
                 <input
                   class="text-control"
                   type="email"
@@ -99,7 +99,7 @@
               <div class="result" id="email-validation"></div>
               <div
                 class="formData">
-                <label>Date de naissance</label><br>
+                <label for="birthdate">Date de naissance</label><br>
                 <input
                   class="text-control"
                   type="date"
@@ -110,15 +110,15 @@
               <div class="result" id="birthdate-validation"></div>
               <div
                 class="formData">
-                <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               </div>
               <div class="result" id="quantity-validation"></div>
               <p class="text-label">Quelles villes ?</p>
               <div
-                class="formData">
+                class="formData" id=location>
                 <input
-                  class="checkbox-input"
+                 class="checkbox-input"
                   type="radio"
                   id="location1"
                   name="location"
@@ -215,7 +215,7 @@
                 class="button"
                 id="submit"
                 value="C'est parti"
-                disabled
+                
               />
             </form>
           </div>
@@ -235,8 +235,6 @@
                 value="Close"                
             />          
          </div>
-
-
       </div>
     </main>
     <footer>
