--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     </div>
   </div>
     <main>
-      <div class="hero-section">
+        <div class="hero-section">
         <div class="hero-content">
           <h1 class="hero-headline">
-            Marathon national<br>
-            de jeux vidéos
+            Marathon national<br>            de jeux vidéos
           </h1>
           <p class="hero-text">
             Vous aimez jouer ? Notre prochain évènement gaming est ouvert
@@ -60,9 +59,8 @@
               name="reserve"
               id="modalForm"
               action="index.html"
-              method="get"
-
-            >
+              method="get" 
+              >
               <div
                 class="formData">
                 <label for="first">Prénom</label><br>                
